--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myblog",
+  "name": "blog",
   "description": "A project of vuepress-theme-hope",
   "version": "2.0.0",
   "license": "MIT",
