--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/repl": "^4.4.3",
     "@vuepress/bundler-vite": "2.0.0-rc.19",
     "@vuepress/plugin-slimsearch": "^2.0.0-rc.74",
+    "flowchart.ts": "^3.0.1",
     "sass-embedded": "^1.83.0",
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.19",
